# mail_service

./: .gitignore  docker-compose.yml
mails/: Dockerfile  app.js  package-lock.json  package.json  producer.js  smtp.js
server/: Dockerfile.dev  db.py  main.py  pika_client.py  pyproject.toml
server/api/: api.py  auth.py
server/domains/: api.py  models.py  schemas.py  services.py
server/mails/: api.py  models.py  schemas.py  services.py
server/migrations/: env.py
server/migrations/versions/: 47cb2a7941b1_fisrt.py
server/scripts/: from_alembic.py  run_server.py
server/users/: api.py  auth.py  models.py  schemas.py  services.py
